[SELC-6238] feat: manage GPU institutionType (#553)